ui(metrics): update CPU chart color palette and sidebar behavior